--- a/Projects/pj1-clon-freecodecamp/src/App.css
+++ b/Projects/pj1-clon-freecodecamp/src/App.css
@@ -1,38 +1,121 @@
+/* App.css */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-size: 18px;
+  background-color: #f5f6f7;
+}
+
+h1 {
+  max-width: 100000px;
+  font-size: 3.8em;
+  font-family: Lato, sans-serif;
+  font-weight: 700;
+  line-height: 1.1;
+  margin: 40px 0;
+}
+
 .App {
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contenedor-principal {
+  min-height: 600px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Media query para pantalla 4K (2560px) */
+@media (min-width: 2560px) {
+  .contenedor-principal {
+    width: 1400px; /* Ajuste de ancho para pantalla 4K */
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    font-size: 3em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 60px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Laptop L (1440px) */
+@media (min-width: 1440px) {
+  .contenedor-principal {
+    width: 1400px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 2.5em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 20px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Laptop (1024px) */
+@media (min-width: 1024px) {
+  .contenedor-principal {
+    width: 1200px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 2em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 18px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Tablet (768px) */
+@media (min-width: 768px) {
+  .contenedor-principal {
+    width: 1000px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 0.5em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 16px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Mobile L (425px) */
+@media (min-width: 425px) {
+  .contenedor-principal {
+    width: 800px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 1.4em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 12px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Mobile M (375px) */
+@media (min-width: 375px) {
+  .contenedor-principal {
+    width: 800px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 1em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 12px 0; /* Ajuste de margen para pantalla 4K */
+  }
+}
+
+/* Media query para pantalla Mobile S (320px) */
+@media (min-width: 320px) {
+  .contenedor-principal {
+    width: 800px; /* Ajuste de ancho para pantalla 4K */
+  }
+
+  h1 {
+    font-size: 1em; /* Ajuste de tamaño de fuente para pantalla 4K */
+    margin: 12px 0; /* Ajuste de margen para pantalla 4K */
   }
 }
